--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
-        <script src="bower_components/threejs/build/three.js"></script>
+        <script src="bower_components/threejs/build/three.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
