--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/detectmobilebrowser.js"></script>
         <script src="scripts/gfx.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/services/main.js"></script>
