--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-43559997-1', 'experiments.dimroc.com');
+      ga('create', 'UA-43559997-1', 'auto');
       ga('send', 'pageview');
     </script>
 
