--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+
+    <meta name="google-site-verification" content="KFJOcbe4F4sAQcx11yd_6hmxu0DVdy6ZgI7y6TFK8VU" />
 </head>
   <body ng-app="dimrocApp">
     <!--[if lt IE 7]>
