--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="bower_components/threejs/build/three.js"></script>
         <script src="scripts/detectmobilebrowser.js"></script>
         <script src="scripts/gfx.js"></script>
         <script src="scripts/app.js"></script>
