--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-43559997-1', 'auto');
-      ga('send', 'pageview');</script> <script src="scripts/vendor.9c48deb8.js"></script> <script src="scripts/scripts.3a6b77e0.js"></script> </body> </html>
+      ga('send', 'pageview');</script> <script src="scripts/scripts.404f373f.js"></script> </body> </html>
