--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 
     <meta name="google-site-verification" content="KFJOcbe4F4sAQcx11yd_6hmxu0DVdy6ZgI7y6TFK8VU" />
 </head>
-  <body ng-app="dimrocApp">
+  <body ng-app="experimentsApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
