Add meta tags for iMessage preview

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,13 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:title" content="experiments.dimroc" />
+    <meta property="og:image" content="/images/CrowdCountiOS.experiment.gif" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 
     <meta name="google-site-verification" content="KFJOcbe4F4sAQcx11yd_6hmxu0DVdy6ZgI7y6TFK8VU" />
 </head>
